force-app/main/default/objects/SVMXA360__CONF_EntitlementSettings__c/SVMXA360__CONF_EntitlementSettings__c.object-meta.xml
<CustomObject>
    <description>Stores the configurable parameters to perform interactive entitlement check functionality.</description>
    <label>Entitlement Settings</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Entitlement Settings Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entitlement Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>