force-app/main/default/objects/SVMXA360__CONF_EntitlementSettings__c/fields/SVMXA360__AccountAPIName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__AccountAPIName__c</fullName>
    <description>Account field on source object to be considered when performing entitlement check.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Account API Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>