force-app/main/default/objects/SVMXA360__CONF_EntitlementSettings__c/fields/SVMXA360__AdjustServiceThreshold__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__AdjustServiceThreshold__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Adjust Service Threshold (Visits) on Assignment</description>
    <label>Adjust Service Threshold</label>
    <type>Checkbox</type>
</CustomField>