force-app/main/default/objects/SVMXA360__CONF_EntitlementSettings__c/fields/SVMXA360__AdjustVisitCountAssignedObject__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__AdjustVisitCountAssignedObject__c</fullName>
    <description>Automatic increment or decrement of Remaining Visit count when the Entitled Service is assigned to the selected object.</description>
    <label>Adjust Visit Count Assigned Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>WorkOrder</fullName>
                <label>Work Order</label>
            </value>
            <value>
                <fullName>ReturnOrder</fullName>
                <label>Return Order</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>