force-app/main/default/objects/SVMXA360__CONF_EntitlementSettings__c/fields/SVMXA360__AllowOverrideSettings__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__AllowOverrideSettings__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether to allow overriding the entitlement settings when performing interactive entitlement (True) or not (False).</description>
    <label>Allow Override Settings</label>
    <type>Checkbox</type>
</CustomField>