force-app/main/default/objects/SVMXA360__CONF_EntitlementSettings__c/fields/SVMXA360__ApplyStackRanking__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ApplyStackRanking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When Checked, stack ranking will be applied when multiple contracts or warranties are found.</description>
    <label>Apply Stack Ranking</label>
    <type>Checkbox</type>
</CustomField>