force-app/main/default/objects/SVMXA360__CONF_EntitlementSettings__c/fields/SVMXA360__AssetAPIName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__AssetAPIName__c</fullName>
    <description>The asset field on the source object should be considered while performing an entitlement check.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Asset API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>