force-app/main/default/objects/SVMXA360__CONF_EntitlementSettings__c/fields/SVMXA360__AssignEntitledService__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__AssignEntitledService__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, applies Entitled Service based on entitlement rule criteria.</description>
    <label>Assign Entitled Service</label>
    <type>Checkbox</type>
</CustomField>