force-app/main/default/objects/SVMXA360__CONF_EntitlementSettings__c/fields/SVMXA360__AssignPricebook__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__AssignPricebook__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Apply Service Contract and Asset Warranty Pricebook when it exists and apply Pricebook Assignment Rule, pricebook is not defined.</description>
    <label>Assign Pricebook</label>
    <type>Checkbox</type>
</CustomField>