force-app/main/default/objects/SVMXA360__CONF_EntitlementSettings__c/fields/SVMXA360__ContractStackRankingFieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ContractStackRankingFieldAPIName__c</fullName>
    <description>The API name of the field in Service Contract object on which the stack ranking will be performed when multiple contracts are found during entitlement.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract Stack Ranking Field API Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>