force-app/main/default/objects/SVMXA360__CONF_EntitlementSettings__c/fields/SVMXA360__ContractStackRankingOrder__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ContractStackRankingOrder__c</fullName>
    <description>The order in which stack ranking will be performed on the contract field.</description>
    <label>Contract Stack Ranking Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ascending</fullName>
            </value>
            <value>
                <fullName>Descending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>