force-app/main/default/objects/SVMXA360__CONF_EntitlementSettings__c/fields/SVMXA360__ExpiredEntitlements__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ExpiredEntitlements__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether to visualize expired coverages when performing interactive entitlement (True) or not (False).</description>
    <label>Expired Entitlements</label>
    <type>Checkbox</type>
</CustomField>