force-app/main/default/objects/SVMXA360__CONF_EntitlementSettings__c/fields/SVMXA360__ExpiredEntitlementsDuration__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ExpiredEntitlementsDuration__c</fullName>
    <description>The duration in months to show Expired Entitlements</description>
    <label>Duration For Expired Entitlement</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>