force-app/main/default/objects/SVMXA360__CONF_EntitlementSettings__c/fields/SVMXA360__FutureEntitlements__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__FutureEntitlements__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether to visualize future coverages when performing interactive entitlement (True) or not (False).</description>
    <label>Future Entitlements</label>
    <type>Checkbox</type>
</CustomField>