force-app/main/default/objects/SVMXA360__CONF_EntitlementSettings__c/fields/SVMXA360__IncludeFullyConsumedServices__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__IncludeFullyConsumedServices__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Includes/hides fully consumed Entitled Services on Interactive Entitlement screen.</description>
    <label>Include Fully Consumed Services</label>
    <type>Checkbox</type>
</CustomField>