force-app/main/default/objects/SVMXA360__CONF_EntitlementSettings__c/fields/SVMXA360__InheritServiceOnReturnOrder__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__InheritServiceOnReturnOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When Checked, if the Entitled Service is populated on Return Order from Case or Work Order, the corresponding Work Order Entitlement is populated.</description>
    <label>Inherit Entitled Service On Return Order</label>
    <type>Checkbox</type>
</CustomField>