force-app/main/default/objects/SVMXA360__CONF_EntitlementSettings__c/fields/SVMXA360__InheritServiceOnWorkOrder__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__InheritServiceOnWorkOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When Checked, if the Entitled Service is populated on Case or Return Order, the corresponding Work Order Entitlement is populated.</description>
    <label>Inherit Entitled Service On Work Order</label>
    <type>Checkbox</type>
</CustomField>