force-app/main/default/objects/SVMXA360__CONF_EntitlementSettings__c/fields/SVMXA360__ObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ObjectAPIName__c</fullName>
    <description>The API name of the source object.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Object API Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>