force-app/main/default/objects/SVMXA360__CONF_EntitlementSettings__c/fields/SVMXA360__OnHoldEntitlements__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__OnHoldEntitlements__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled, the Interactive Entitlement screen would show Contracts which are in On Hold status</description>
    <label>On Hold Entitlements</label>
    <type>Checkbox</type>
</CustomField>