force-app/main/default/objects/SVMXA360__CONF_EntitlementSettings__c/fields/SVMXA360__Scope__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Scope__c</fullName>
    <description>Field to define the scope of Entitlement settings.</description>
    <label>Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Global</fullName>
                <default>true</default>
                <label>Global</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>