force-app/main/default/objects/SVMXA360__CONF_EntitlementSettings__c/fields/SVMXA360__WarrantyStackRankingFieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__WarrantyStackRankingFieldAPIName__c</fullName>
    <description>The API name of the field in Warranty object on which the stack ranking will be performed when multiple warranties are found during entitlement.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Warranty Stack Ranking Field API Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>