force-app/main/default/objects/SVMXA360__CONF_EntitlementSettings__c/recordTypes/SVMXA360__CommonConfiguration.recordType-meta.xml
<RecordType>
    <fullName>SVMXA360__CommonConfiguration</fullName>
    <active>true</active>
    <description>Common Configuration for all Entitlement functionalities</description>
    <label>Common Configuration</label>
</RecordType>