force-app/main/default/objects/SVMXA360__CONF_EntitlementSettings__c/recordTypes/SVMXA360__ObjectConfiguration.recordType-meta.xml
<RecordType>
    <fullName>SVMXA360__ObjectConfiguration</fullName>
    <active>true</active>
    <description>Default record type</description>
    <label>Object Configuration</label>
</RecordType>